[project]
name = "streamlit-5-web-aplication"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hashiryo", email = "hashimotoryoma@gmail.com" }
]
dependencies = [
    "streamlit>=1.33.0",
    "ipykernel>=6.29.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_5_web_aplication"]
